--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
+      - run: npm cache clean --force
       - run: npm install
       - run: npm run build
        
