--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: 12
-      - run: npm ci
+      #- run: npm ci
       #- run: npm install
       #- run: npm cache clean --force
       - run: npm run build
