--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: 12
       #- run: npm ci
-      - run: npm install npm@5
+      - run: npm install -g npm@5
       #- run: npm cache clean --force
       - run: npm run build
        
