--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -29,9 +29,9 @@ jobs:
         with:
           node-version: 12
       #- run: npm ci
-      - run: npm install -g npm@6
+      - run: npm install
       #- run: npm cache clean --force
-      - run: npm run build
+      - run: npm run build --if-present
        
       # Runs a set of commands using the runners shell
       - name: installing surge
